labs/lab-02-eks-networking-ingress/k8s/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    env: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    env: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    env: database
